[metadata]
name = python-testmark
version = 1.0
author = iameru@github
description = a small testmark(up) parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iameru/python-testmark
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: Text Processing :: Markup


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
